Add check for pthreads
This is true in most cases but just to be sure it's available

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,8 @@ elseif (UNIX)
   endif (APPLE)
   
   find_package(PkgConfig MODULE REQUIRED)
+  set(THREADS_PREFER_PTHREAD_FLAG ON)
+  find_package(Threads REQUIRED)
   pkg_check_modules(LIBAVCODEC REQUIRED IMPORTED_TARGET libavcodec)
   pkg_check_modules(LIBAVFORMAT REQUIRED IMPORTED_TARGET libavformat)
   pkg_check_modules(LIBSWRESAMPLE REQUIRED IMPORTED_TARGET libswresample)
