Link with -pthreads when using Clang
This fixes linking issue on FreeBSD

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,8 +39,8 @@ elseif (UNIX)
   )
 
   # GCC 10 requires linking directly with pthread for some reason
-  if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 11)
-    target_link_libraries(${EXECUTABLE_TITLE} pthread)
+  if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 11 OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    target_link_libraries(${EXECUTABLE_TITLE} Threads::Threads)
   endif ()
 endif()
 set (EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}")
