Add option to select fixed width progress bar
This option makes progress bar not scale to column width
and makes width adjustable. Default is set to 80 cols.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,6 +27,10 @@ if (WIN32)
 
 elseif (UNIX)
   add_executable(${EXECUTABLE_TITLE} ${SOURCE_FILES})
+  if(SCALEPROGBAR)
+    target_compile_definitions(${EXECUTABLE_TITLE} PUBLIC "SCALEDPROGRESSBAR")
+  endif()
+  target_compile_definitions(${EXECUTABLE_TITLE} PUBLIC "PROGRESSBARWIDTH=${PROGBARWIDTH}")
   if(NOT UCHECKMARKS)
     target_compile_definitions(${EXECUTABLE_TITLE} PUBLIC "NOUCHECKMARKS")
   endif()
