--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ project(rsgain
   LANGUAGES CXX
 )
 
+option(SCALEPROGBAR "Scale progress bar to column width" ON)
+set(PROGBARWIDTH "80" CACHE STRING "Fixed width of progress bar")
 option(UCHECKMARKS "Enable use of Unicode checkmarks" ON)
 
 set(CMAKE_CXX_STANDARD 20)
