Add option to limit progress bar width (#28)
* Add option to select fixed width progress bar

This option makes progress bar not scale to column width
and makes width adjustable. Default is set to 80 cols.

* Change to max progress bar instead of fixed

Co-authored-by: complexlogic <complexlogic@users.noreply.github.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ project(rsgain
   LANGUAGES CXX
 )
 
+set(MAXPROGBARWIDTH "0" CACHE STRING "Maximum width of progress bar")
 option(UCHECKMARKS "Enable use of Unicode checkmarks" ON)
 
 set(CMAKE_CXX_STANDARD 20)
