--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,6 +27,7 @@ if (WIN32)
 
 elseif (UNIX)
   add_executable(${EXECUTABLE_TITLE} ${SOURCE_FILES})
+  target_compile_definitions(${EXECUTABLE_TITLE} PUBLIC "PROGRESSBARWIDTH=${PROGBARWIDTH}")
   if(NOT UCHECKMARKS)
     target_compile_definitions(${EXECUTABLE_TITLE} PUBLIC "NOUCHECKMARKS")
   endif()
@@ -47,3 +48,7 @@ elseif (UNIX)
   endif ()
 endif()
 set (EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}")
+
+if (MAXPROGBARWIDTH GREATER_EQUAL 20)
+  target_compile_definitions(${EXECUTABLE_TITLE} PUBLIC "MAXPROGBARWIDTH=${MAXPROGBARWIDTH}")
+endif ()
