Added Musepack support

--- a/config/presets/loudgain.ini
+++ b/config/presets/loudgain.ini
@@ -104,3 +104,11 @@ ID3v2Version=3
 #ClipMode=a
 #MaxPeakLevel=-1.0
 #TruePeak=true
+
+[Musepack]
+#TagMode=i
+#Album=true
+#TargetLoudness=-18
+#ClipMode=p
+#MaxPeakLevel=0.0
+#TruePeak=false
