--- a/config/presets/default.ini
+++ b/config/presets/default.ini
@@ -104,3 +104,11 @@ ID3v2Version=3
 #ClipMode=p
 #MaxPeakLevel=0.0
 #TruePeak=false
+
+[Musepack]
+#TagMode=i
+#Album=true
+#TargetLoudness=-18
+#ClipMode=p
+#MaxPeakLevel=0.0
+#TruePeak=false
