--- a/config/presets/ebur128.ini
+++ b/config/presets/ebur128.ini
@@ -104,3 +104,11 @@ ID3v2Version=3
 #ClipMode=p
 #MaxPeakLevel=-1.0
 #TruePeak=true
+
+[Musepack]
+#TagMode=i
+#Album=true
+#TargetLoudness=-18
+#ClipMode=p
+#MaxPeakLevel=0.0
+#TruePeak=false
