--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ if (WIN32)
   find_library(GETOPT getopt REQUIRED)
   find_path(INIH_INCLUDE_DIR "ini.h" REQUIRED)
   find_library(INIH inih REQUIRED)
+  find_package(fdk-aac CONFIG REQUIRED)
   if (VCPKG_TARGET_TRIPLET STREQUAL "custom-triplet")
     find_library(ZLIB zlib REQUIRED)
 	set(STATIC_LIBS ${ZLIB} "ws2_32.lib" "secur32.lib" "mfplat.lib" "mfuuid.lib" "strmiids.lib" "bcrypt.lib")
