--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,19 +135,27 @@ elseif (UNIX)
   
   # Build Debian packages
   if (PACKAGE STREQUAL "DEB")
-    set(CPACK_DEBIAN_PACKAGE_NAME ${EXECUTABLE_TITLE})
     set(CPACK_DEBIAN_FILE_NAME "DEB-DEFAULT")
     set(CPACK_DEBIAN_PACKAGE_VERSION ${CMAKE_PROJECT_VERSION})
-    if (NOT CPACK_DEBIAN_PACKAGE_ARCHITECTURE)
-      set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
-    endif()
     set(CPACK_DEBIAN_PACKAGE_DEPENDS "libavcodec58 (>= 4.2.4), libavutil56 (>= 4.2.4), libswresample3  (>= 4.2.4), libavformat58 (>= 4.2.4), libebur128-1 (>=1.2.4), libinih1, libc6 (>=2.29), libstdc++6 (>=10.2), zlib1g")
     set(CPACK_DEBIAN_PACKAGE_MAINTAINER "complexlogic")
     set(CPACK_DEBIAN_PACKAGE_SECTION "utils")
     set(CPACK_DEBIAN_ARCHIVE_TYPE "gnutar")
     set(CPACK_DEBIAN_COMPRESSION_TYPE "gzip")
     set(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
+
+  # Build Fedora packages
+  elseif (PACKAGE STREQUAL "RPM")
+    set(CPACK_RPM_FILE_NAME "RPM-DEFAULT")
+    set(CPACK_RPM_PACKAGE_LICENSE "BSD")
+    set(CPACK_RPM_PACKAGE_GROUP "Applications/Multimedia")
+    set(CPACK_RPM_PACKAGE_AUTOREQPROV 0)
+    set(CPACK_RPM_PACKAGE_REQUIRES "libavcodec-free >= 5, libavformat-free >= 5, libswresample-free >= 5, libavutil-free >= 5, libebur128, zlib, inih")
+  endif ()
+  if (PACKAGE)
+    set(CPACK_PACKAGE_DESCRIPTION_SUMMARY ${PROJECT_DESCRIPTION})
     set(CPACK_PACKAGE_NAME ${EXECUTABLE_TITLE})
+    set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
     set(CPACK_GENERATOR ${PACKAGE})
     include(CPack)
   endif ()
