--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -137,4 +137,4 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: build/*${{matrix.config.package_ext}}
-          token: ${{secrets.GITHUB_TOKEN}}
+          token: ${{secrets.ACTIONS_SECRET}}
