Support Lowercase, ID3v2Version, OpusMode settings in Global preset sections

--- a/config/presets/default.ini
+++ b/config/presets/default.ini
@@ -5,6 +5,9 @@ TargetLoudness=-18
 ClipMode=p
 MaxPeakLevel=0.0
 TruePeak=false
+Lowercase=false
+ID3v2Version=3
+OpusMode=d
 
 [MP3]
 #TagMode=i
@@ -13,8 +16,8 @@ TruePeak=false
 #ClipMode=p
 #MaxPeakLevel=0.0
 #TruePeak=false
-Lowercase=false
-ID3v2Version=3
+#Lowercase=false
+#ID3v2Version=3
 
 [FLAC]
 #TagMode=i
@@ -39,7 +42,7 @@ ID3v2Version=3
 #ClipMode=p
 #MaxPeakLevel=0.0
 #TruePeak=false
-OpusMode=d
+#OpusMode=d
 
 [M4A]
 #TagMode=i
@@ -48,7 +51,7 @@ OpusMode=d
 #ClipMode=p
 #MaxPeakLevel=0.0
 #TruePeak=false
-Lowercase=false
+#Lowercase=false
 
 [WMA]
 #TagMode=i
@@ -57,7 +60,7 @@ Lowercase=false
 #ClipMode=p
 #MaxPeakLevel=0.0
 #TruePeak=false
-Lowercase=false
+#Lowercase=false
 
 [MP2]
 #TagMode=i
@@ -66,8 +69,8 @@ Lowercase=false
 #ClipMode=p
 #MaxPeakLevel=0.0
 #TruePeak=false
-Lowercase=false
-ID3v2Version=3
+#Lowercase=false
+#ID3v2Version=3
 
 [WAV]
 #TagMode=i
@@ -76,8 +79,8 @@ ID3v2Version=3
 #ClipMode=p
 #MaxPeakLevel=0.0
 #TruePeak=false
-Lowercase=false
-ID3v2Version=3
+#Lowercase=false
+#ID3v2Version=3
 
 [AIFF]
 #TagMode=i
@@ -86,8 +89,8 @@ ID3v2Version=3
 #ClipMode=p
 #MaxPeakLevel=0.0
 #TruePeak=false
-Lowercase=false
-ID3v2Version=3
+#Lowercase=false
+#ID3v2Version=3
 
 [Wavpack]
 #TagMode=i
