--- a/config/presets/loudgain.ini
+++ b/config/presets/loudgain.ini
@@ -5,6 +5,9 @@ TargetLoudness=-18
 ClipMode=a
 MaxPeakLevel=-1.0
 TruePeak=true
+Lowercase=true
+ID3v2Version=3
+OpusMode=r
 
 [MP3]
 #TagMode=i
@@ -13,8 +16,8 @@ TruePeak=true
 #ClipMode=a
 #MaxPeakLevel=-1.0
 #TruePeak=true
-Lowercase=true
-ID3v2Version=3
+#Lowercase=true
+#ID3v2Version=3
 
 [FLAC]
 #TagMode=i
@@ -39,7 +42,7 @@ TargetLoudness=-23
 #ClipMode=a
 #MaxPeakLevel=-1.0
 #TruePeak=true
-OpusMode=r
+#OpusMode=r
 
 [M4A]
 #TagMode=i
@@ -48,7 +51,7 @@ OpusMode=r
 #ClipMode=a
 #MaxPeakLevel=-1.0
 #TruePeak=true
-Lowercase=true
+#Lowercase=true
 
 [WMA]
 #TagMode=i
@@ -57,7 +60,7 @@ Lowercase=true
 #ClipMode=a
 #MaxPeakLevel=-1.0
 #TruePeak=true
-Lowercase=true
+#Lowercase=true
 
 [MP2]
 #TagMode=i
@@ -66,8 +69,8 @@ Lowercase=true
 #ClipMode=a
 #MaxPeakLevel=-1.0
 #TruePeak=true
-Lowercase=true
-ID3v2Version=3
+#Lowercase=true
+#ID3v2Version=3
 
 [WAV]
 #TagMode=i
@@ -76,8 +79,8 @@ ID3v2Version=3
 #ClipMode=a
 #MaxPeakLevel=-1.0
 #TruePeak=true
-Lowercase=true
-ID3v2Version=3
+#Lowercase=true
+#ID3v2Version=3
 
 [AIFF]
 #TagMode=i
@@ -86,8 +89,8 @@ ID3v2Version=3
 #ClipMode=a
 #MaxPeakLevel=-1.0
 #TruePeak=true
-Lowercase=true
-ID3v2Version=3
+#Lowercase=true
+#ID3v2Version=3
 
 [Wavpack]
 #TagMode=i
