--- a/config/presets/ebur128.ini
+++ b/config/presets/ebur128.ini
@@ -108,6 +108,14 @@ OpusMode=d
 #MaxPeakLevel=-1.0
 #TruePeak=true
 
+[TAK]
+#TagMode=i
+#Album=true
+#TargetLoudness=-23
+#ClipMode=p
+#MaxPeakLevel=-1.0
+#TruePeak=true
+
 [Musepack]
 #TagMode=i
 #Album=true
