--- a/config/presets/loudgain.ini
+++ b/config/presets/loudgain.ini
@@ -108,6 +108,14 @@ TargetLoudness=-23
 #MaxPeakLevel=-1.0
 #TruePeak=true
 
+[TAK]
+#TagMode=i
+#Album=true
+#TargetLoudness=-18
+#ClipMode=a
+#MaxPeakLevel=-1.0
+#TruePeak=true
+
 [Musepack]
 #TagMode=i
 #Album=true
