--- a/config/presets/no_album.ini
+++ b/config/presets/no_album.ini
@@ -108,6 +108,14 @@ OpusMode=d
 #MaxPeakLevel=0.0
 #TruePeak=false
 
+[TAK]
+#TagMode=i
+#Album=true
+#TargetLoudness=-18
+#ClipMode=p
+#MaxPeakLevel=0.0
+#TruePeak=false
+
 [Musepack]
 #TagMode=i
 #Album=true
