Make -I mode 'keep' default

--- a/config/presets/ebur128.ini
+++ b/config/presets/ebur128.ini
@@ -6,7 +6,7 @@ ClipMode=p
 MaxPeakLevel=-1.0
 TruePeak=true
 Lowercase=false
-ID3v2Version=3
+ID3v2Version=keep
 OpusMode=d
 
 [MP3]
@@ -17,7 +17,7 @@ OpusMode=d
 #MaxPeakLevel=-1.0
 #TruePeak=true
 #Lowercase=false
-#ID3v2Version=3
+#ID3v2Version=keep
 
 [FLAC]
 #TagMode=i
@@ -71,7 +71,7 @@ OpusMode=d
 #MaxPeakLevel=-1.0
 #TruePeak=true
 #Lowercase=false
-#ID3v2Version=3
+#ID3v2Version=keep
 
 [WAV]
 #TagMode=i
@@ -81,7 +81,7 @@ OpusMode=d
 #MaxPeakLevel=-1.0
 #TruePeak=true
 #Lowercase=false
-#ID3v2Version=3
+#ID3v2Version=keep
 
 [AIFF]
 #TagMode=i
@@ -91,7 +91,7 @@ OpusMode=d
 #MaxPeakLevel=-1.0
 #TruePeak=true
 #Lowercase=false
-#ID3v2Version=3
+#ID3v2Version=keep
 
 [Wavpack]
 #TagMode=i
